[package]
name = "cg2d"
version = "0.1.0"
authors = ["yineng <dev@dev.com>"]

[dependencies]
slab = { git = "https://github.com/GaiaWorld/pi_lib.git"}
heap = { git = "https://github.com/GaiaWorld/pi_lib.git"}
fx_hashmap = { git = "https://github.com/GaiaWorld/pi_lib.git"}

cgmath = { path = "../cgmath" }
triangulation = { path = "../triangulation" }
collision = { path = "../collision" }
num-traits = "*"

[dev-dependencies]
rand = "*"