[package]
name = "octree"
version = "0.1.0"
authors = ["yineng <dev@dev.com>"]

[dependencies]
# cgmath = { version = "0.16.1" }
cgmath = { path = "../cgmath" }
collision = { path = "../collision" }
slab = { path =  "../../pi_lib/slab"}
map = { path =  "../../pi_lib/map"}

[dev-dependencies]
pcg_rand = "0.12"
rand = "0.7"
